--- a/src/index.css
+++ b/src/index.css
@@ -73,33 +73,6 @@ button:focus-visible {
   }
 }
 
-.sidebar-collapser{
-  position: absolute;
-  border: 0;
-  z-index: 5;
-  height: 15px;
-  width: 15px;
-  top: 50vh;
-  left: -0.3vw;
-}
-
-.side-new-node {
-  background-color: #656565;  
-  position: absolute;
-  top: 8vh;
-  height: 80vh;
-  right: 0;
-  padding: 0;
-  text-align: left;
-  border: 1px solid rgb(75, 75, 75);
-}
-
-.add-node {
-  z-index: 2;
-  position: absolute;
-  right: 2vw;
-  top: 15vh;
-}
 
 
 ::-webkit-scrollbar {
